[gd_scene load_steps=7 format=3 uid="uid://d2cflcywhmg48"]

[ext_resource type="Script" path="res://scenes/power_up.gd" id="1_8cptp"]
[ext_resource type="Texture2D" uid="uid://c3v15p4y3vtga" path="res://graphics/powerup-laser.png" id="1_u5jv3"]
[ext_resource type="Texture2D" uid="uid://bi7cyutoba0ol" path="res://graphics/powerup-shield.png" id="3_l53a6"]
[ext_resource type="Texture2D" uid="uid://buts7qmwo2n2f" path="res://graphics/powerup-speed.png" id="4_y6vw3"]
[ext_resource type="PackedScene" uid="uid://diyp5kgms57hs" path="res://scenes/components/blinker_component.tscn" id="5_4lywp"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_72qoj"]
size = Vector2(28, 24)

[node name="PowerUp" type="Area2D"]
collision_layer = 16
script = ExtResource("1_8cptp")
sprites = Array[Texture2D]([ExtResource("1_u5jv3"), ExtResource("3_l53a6"), ExtResource("4_y6vw3")])

[node name="Sprite2D" type="Sprite2D" parent="."]
unique_name_in_owner = true
scale = Vector2(0.5, 0.5)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_72qoj")

[node name="FadeWarningTimer" type="Timer" parent="."]
wait_time = 7.0
autostart = true

[node name="FadeTimer" type="Timer" parent="."]
wait_time = 10.0
autostart = true

[node name="BlinkerComponent" parent="." instance=ExtResource("5_4lywp")]
unique_name_in_owner = true

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="timeout" from="FadeWarningTimer" to="." method="_on_fade_warning_timer_timeout"]
[connection signal="timeout" from="FadeTimer" to="." method="_on_fade_timer_timeout"]
